# claude-statusline

./: .gitignore  Cargo.toml  LICENSE  README.md  statusline.toml.example
.github/workflows/: ci.yml  release.yml
scripts/: release-helper.sh
src/: cache.rs  cli.rs  config.rs  error.rs  format.rs  lib.rs  main.rs  models.rs  preview.rs  render.rs  setup.rs  tests.rs
