[package]
name = "claude-statusline"
version = "0.3.0"
edition = "2024"
publish = false
authors = ["Fabio Fontana"]
description = "Minimal offline Claude Code status line formatter"
license = "MIT"
repository = "https://github.com/fabifont/claude-statusline"
homepage = "https://github.com/fabifont/claude-statusline"
documentation = "https://github.com/fabifont/claude-statusline#readme"
readme = "README.md"
keywords = ["claude", "statusline", "cli", "formatter"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4.42", features = ["clock"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
toml = "0.8"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "warn"
